# avp

./: .gclient  .gitignore  .gitmodules  .gn  BUILD.gn  DEPS  README.md  avp.gni
.github/workflows/: clang-format-check.yml
api/: BUILD.gn  content_source.h  content_source_factory.h  player.h  player_interface.h
api/content_source/: content_source.h  content_source_factory.h  default_content_source_factory.cc  default_content_source_factory.h
api/demuxer/: default_demuxer_factory.cc  default_demuxer_factory.h  demuxer.h  demuxer_factory.h
audio/: BUILD.gn  audio_format.h  channel_layout.cc  channel_layout.h
base/: BUILD.gn  any.h  byte_utils.cc  byte_utils.h  checks.h  condition.h  constructor_magic.h  count_down_latch.cc  count_down_latch.cpp  count_down_latch.h  error.h  errors.cc  errors.h  hexdump.cc  hexdump.h  logging.cc  logging.h  logging_test.cc  mutex.h  noncopyable.h  null.cc  null.cpp  thread_annotation.h  types.h  unique_fd.h  utils.cc  utils.h
base/system/: BUILD.gn  avp_export.h  avp_export_template.h  unused.h
base/task_queue/: default_task_queue_factory.h  default_task_queue_factory_std.cpp  queued_task.h  task_queue.h  task_queue_base.h  task_queue_factory.h  task_queue_std.cpp  task_queue_std.h  to_queued_task.h
build_overrides/: build.gni
common/: BUILD.gn  Lookup.h  avc_utils.cc  avc_utils.h  bit_reader.cc  bit_reader.h  buffer.cc  buffer.h  channel_layout.cc  channel_layout.h  codec_constants.h  color_utils.cc  color_utils.h  esds.cc  esds.h  handler.cc  handler.cpp  handler.h  handler_roster.cc  handler_roster.cpp  handler_roster.h  handler_test.cc  handler_test.cpp  hevc_utils.cc  hevc_utils.h  looper.cc  looper.cpp  looper.h  media_buffer.cc  media_buffer.cpp  media_buffer.h  media_defs.cc  media_defs.h  media_errors.h  message.cc  message.cpp  message.h  meta_data.cc  meta_data.h  meta_data_utils.cc  (+3 more)
common/media/hardware/: video_api.h
common/test/: BUILD.gn  looper_test.cpp
content_source/: BUILD.gn  default_content_source_factory.cc  default_content_source_factory.h  generic_source.cc  generic_source.h
content_source/http_live/: http_live_source.cc  http_live_source.h  playlist_parser.cc  playlist_parser.h
core/: BUILD.gn  avp_audio_render.cc  avp_audio_render.h  avp_audio_render_unittest.cc  avp_builder.cc  avp_decoder.cc  avp_decoder.h  avp_decoder_base.cc  avp_decoder_base.h  avp_decoder_factory.cc  avp_decoder_factory.h  avp_decoder_unittest.cc  avp_passthrough_decoder.cc  avp_passthrough_decoder.h  avp_passthrough_decoder_unittest.cc  avp_render.cc  avp_render.h  avp_render_unittest.cc  avp_subtitle_decoder.cc  avp_subtitle_decoder.h  avp_tunnel_decoder.cc  avp_tunnel_decoder.h  avp_video_render.cc  avp_video_render.h  avplayer.cc  avplayer.h  avsync_controller.cc  avsync_controller.h  mock_task_runner_factory.h  packet_source.cc  packet_source.h
decoder/: BUILD.gn  ffmpeg_audio_decoder.cc  ffmpeg_audio_decoder.h  ffmpeg_decoder.cc  ffmpeg_decoder.h  ffmpeg_decoder_factory.cc  ffmpeg_decoder_factory.h  ffmpeg_video_decoder.cc  ffmpeg_video_decoder.h
demuxer/: BUILD.gn  ffmpeg_demuxer.cc  ffmpeg_demuxer.h  ffmpeg_demuxer_factory.cc  ffmpeg_demuxer_factory.h  ffmpeg_helper.h  internal_demuxer_factory.cc  internal_demuxer_factory.h  mp4_demuxer.cc  mp4_demuxer.h
demuxer/isobmff/: BUILD.gn  box_reader.cc  box_reader.h  box_types.h  sample_table.cc  sample_table.h
demuxer/mpeg2/: BUILD.gn  mpeg2_common.cc  mpeg2_common.h  mpeg2_ps_demuxer.cc  mpeg2_ps_demuxer.h  mpeg2_ts_demuxer.cc  mpeg2_ts_demuxer.h
examples/: AudioFileRender.cc  AudioFileRender.h  BUILD.gn  VideoFileRender.cc  VideoFileRender.h
examples/android/: .gitignore  AndroidManifest.xml  BUILD.gn  README.md  build.gradle  build_demo.sh  settings.gradle
examples/android/app/: build.gradle  proguard-rules.pro
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/io/github/yoofa/avpdemo/: MainActivity.kt  PlayerActivity.kt
examples/android/app/src/main/res/layout/: activity_main.xml  activity_player.xml
examples/android/app/src/main/res/values/: colors.xml  themes.xml
examples/android/java/io/github/yoofa/avpdemo/: FileBrowserActivity.java  FileItem.java  MainActivity.java  MimeTypeUtils.java  OkHttpHttpProvider.java  PlayerActivity.java  StorageUtils.java
examples/android/java/res/layout/: activity_file_browser.xml  activity_main.xml  activity_player.xml  item_file.xml  item_storage.xml
examples/android/java/res/values/: strings.xml
examples/avplay/: av_play.cc  file_sink.cc  file_sink.h  gtk_window.cc  gtk_window.h
examples/gtk/: BUILD.gn
modules/ffmpeg/: BUILD.gn  ffmpeg_helper.cc  ffmpeg_helper.h
player/: BUILD.gn  README.md  README.md.bak  audio_decoder.h  audio_decoder_factory.h  audio_frame.cc  audio_frame.h  audio_sink.h  av_play.cpp  av_play.h  avp_audio_render.cc  avp_audio_render.h  avp_audio_render_unittest.cc  avp_builder.cc  avp_decoder.cc  avp_decoder.cpp  avp_decoder.h  avp_decoder_base.cc  avp_decoder_base.h  avp_decoder_factory.cc  avp_decoder_factory.h  avp_decoder_unittest.cc  avp_passthrough_decoder.cc  avp_passthrough_decoder.h  avp_render.cc  avp_render.cpp  avp_render.h  avp_render_synchronizer.cc  avp_render_synchronizer.h  avp_render_unittest.cc  avp_subtitle_decoder.cc  avp_subtitle_decoder.h  avp_tunnel_decoder.cc  avp_tunnel_decoder.h  avp_video_render.cc  avp_video_render.h  avp_video_render_unittest.cc  avplayer.cc  avplayer.cpp  avplayer.h  (+38 more)
sdk/android/: BUILD.gn
sdk/android/api/io/github/yoofa/avp/: AudioSink.java  AvpPlayer.java  DefaultAudioSink.java  HttpConnection.java  HttpProvider.java  SeekMode.java  TrackInfo.java
sdk/android/src/jni/: avp_player_jni.cc  avp_player_jni.h  java_http_provider_jni.cc  java_http_provider_jni.h  jni_onload.cc
test/: BUILD.gn  gmock.h  gtest.h  gtest_demo.cc  test_main.cc  test_main_lib.cc  test_main_lib.h
video/: BUILD.gn
video/decoder/: BUILD.gn  ffmpeg_decoder.cc  ffmpeg_decoder.h  ffmpeg_decoder_factory.cc  ffmpeg_decoder_factory.h
