import("avp.gni")

group("default") {
  testonly = true
  deps = [ ":avp" ]

  if (ave_include_test) {
    deps += [
      "base:base_unittests",
      "media:media_unittests",
      "test",
    ]
  }
}

ave_shared_library("avp") {
  testonly = true
  sources = []

  #complete_static_lib = true
  suppressed_configs += [ "//build/config/compiler:thin_archive" ]
  defines = []
  deps = []

  deps += [ "core:avplayer_builder" ]

  #deps += [ "demuxer" ]
}
