group("base") {
  visibility = [ "*" ]
  public_deps = [
    ":avp_base",
    ":logging",
    ":logging_test",
    ":utils",
  ]
}

static_library("avp_base") {
  visibility = [ "*" ]
  sources = [ "null.cc" ]
  deps = []
  public_deps = []

  public_deps += [ ":macromagic" ]
}

source_set("macromagic") {
  visibility = [ "*" ]
  sources = [
    "constructor_magic.h",
    "thread_annotation.h",
  ]
}

static_library("utils") {
  sources = [ "error.h" ]
}

static_library("count_down_latch") {
  visibility = [ "*" ]
  sources = [
    "count_down_latch.cc",
    "count_down_latch.h",
  ]
}

source_set("ignore_wundef") {
  sources = [ "ignore_wundef.h" ]
}

static_library("logging") {
  sources = [
    "logging.cc",
    "logging.h",
  ]
}

executable("logging_test") {
  visibility = [ "*" ]
  sources = [ "logging_test.cc" ]

  deps = [ ":logging" ]
}
