import("//avp.gni")

group("base") {
  visibility = [ "*" ]
  public_deps = [
    ":avp_base",
    ":logging",
    ":logging_test",
    ":utils",
  ]
}

avp_library("avp_base") {
  visibility = [ "*" ]
  sources = [ "null.cc" ]

  deps = [ ":macromagic" ]
}

avp_source_set("macromagic") {
  visibility = [ "*" ]
  sources = [
    "constructor_magic.h",
    "thread_annotation.h",
  ]
}

avp_library("utils") {
  sources = [
    "byte_utils.cc",
    "byte_utils.h",
    "checks.h",
    "errors.cc",
    "errors.h",
    "types.h",
    "unique_fd.h",
    "utils.cc",
    "utils.h",
  ]
}

avp_library("count_down_latch") {
  visibility = [ "*" ]
  sources = [
    "count_down_latch.cc",
    "count_down_latch.h",
  ]
}

source_set("ignore_wundef") {
  sources = [ "ignore_wundef.h" ]
}

avp_library("logging") {
  sources = [
    "logging.cc",
    "logging.h",
  ]
}

executable("logging_test") {
  visibility = [ "*" ]
  sources = [ "logging_test.cc" ]

  deps = [ ":logging" ]
}
