import("//avp.gni")

group("common") {
  deps = [
    ":foundation",
    ":test_handler",
  ]
}

avp_library("foundation") {
  sources = [
    "handler.cc",
    "handler.h",
    "handler_roster.cc",
    "handler_roster.h",
    "looper.cc",
    "looper.h",
    "media_buffer.cc",
    "media_buffer.h",
    "message.cc",
    "message.h",
  ]

  deps = [
    "../base:avp_base",
    "../base:count_down_latch",
  ]
  configs += [
    "..:no_exit_time_destructors",
    "..:no_global_constructors",
  ]
}

avp_executable("test_handler") {
  sources = [ "handler_test.cc" ]

  deps = [
    ":foundation",
    "//base:avp_base",
  ]

  ldflags = [ "-pthread" ]
}
