import("//avp.gni")

group("demuxer") {
}

ave_library("ffmpeg_demuxer") {
  sources = [
    "ffmpeg_demuxer.cc",
    "ffmpeg_demuxer.h",
    "ffmpeg_demuxer_factory.cc",
    "ffmpeg_demuxer_factory.h",
  ]
  deps = [
    "../base:logging",
    "../base:utils",
    "../modules/ffmpeg:ffmpeg_helper",
    "../player:player_interface",
    "//third_party/ffmpeg",
  ]
}
