import("//avp.gni")

group("demuxer") {
}

ave_library("ave_demuxer_factory") {
}

ave_library("ffmpeg_demuxer_factory") {
  sources = [
    "ffmpeg_demuxer.cc",
    "ffmpeg_demuxer.h",
    "ffmpeg_demuxer_factory.cc",
    "ffmpeg_demuxer_factory.h",
  ]
  deps = [
    "../api:player_interface",
    "../base:logging",
    "../base:utils",
    "../modules/ffmpeg:ffmpeg_helper",
    "//third_party/ffmpeg",
  ]
}
