import("//avp.gni")

group("examples") {
  public_deps = [ ":avplay" ]
}

ave_executable("avplay") {
  sources = [
    "avplay/av_play.cc",
    "avplay/av_play.h",
  ]
  deps = [
    ":audio_file_render",
    ":gtk_window",
    ":video_file_render",
    "../base:logging",
    "../player:avplayer",
  ]

  deps += [ "//build/config/linux/gtk" ]
}

ave_library("gtk_window") {
  sources = [
    "avplay/gtk_window.cc",
    "avplay/gtk_window.h",
  ]
  cflags = [ "-Wno-deprecated-declarations" ]

  deps = [
    "../base:logging",
    "../media:foundation",
    "../player:avplayer",
    "../player:player_interface",
    "//third_party/libyuv",
  ]

  deps += [ "//build/config/linux/gtk" ]
}

ave_library("video_file_render") {
  sources = [
    "VideoFileRender.cc",
    "VideoFileRender.h",
  ]

  deps = [
    "../base:logging",
    "../media:foundation",
    "../player:avplayer",
    "../player:player_interface",
  ]
}
ave_library("audio_file_render") {
  sources = [
    "AudioFileRender.cc",
    "AudioFileRender.h",
  ]

  deps = [
    "../base:logging",
    "../media:foundation",
    "../player:avplayer",
    "../player:player_interface",
  ]
}
