import("//avp.gni")

group("examples") {
  public_deps = [ ":avplay" ]
}

ave_executable("avplay") {
  sources = [
    "avplay/av_play.cc",
    "avplay/av_play.h",
  ]
  deps = [
    ":gtk_window",
    "../base:logging",
    "../core:avplayer_builder",
  ]

  deps += [ "gtk" ]
}

ave_library("gtk_window") {
  sources = [
    "avplay/gtk_window.cc",
    "avplay/gtk_window.h",
  ]
  cflags = [ "-Wno-deprecated-declarations" ]

  deps = [
    "../api:player_interface",
    "../base:logging",
    "../media/foundation",
    "//media/video:video_render",
    "//third_party/libyuv",
  ]

  deps += [ "gtk" ]
}
