import("//avp.gni")

group("examples") {
  public_deps = [ ":avplay" ]

  if (is_android) {
    public_deps += [ "android" ]
  }
}

ave_executable("avplay") {
  sources = [
    "avplay/av_play.cc",
    "avplay/av_play.h",
    "avplay/file_sink.cc",
    "avplay/file_sink.h",
  ]
  deps = [
    "../api:player_interface",
    "../base:logging",
    "../core:avplayer_builder",
    "../media/audio:audio_device_base",
    "../media/audio:audio_channel_layout",
    "../media/video:video_render",
    "../media/foundation",
  ]

  if (is_linux) {
    deps += [
      ":gtk_window",
      "gtk",
    ]
  }
}

ave_library("gtk_window") {
  sources = [
    "avplay/gtk_window.cc",
    "avplay/gtk_window.h",
  ]
  cflags = [ "-Wno-deprecated-declarations" ]

  deps = [
    "../api:player_interface",
    "../base:logging",
    "../media/foundation",
    "//media/video:video_render",
    "//third_party/libyuv",
  ]

  if (is_linux) {
    deps += [ "gtk" ]
  }
}
