import("//base/build/ave.gni")

group("player") {
  deps = [ ":avplayer" ]
}

ave_library("avplayer_builder") {
  sources = [ "avp_builder.cc" ]
  deps = [
    ":avplayer",
    "//api:player_interface",
  ]
}

ave_library("packet_source") {
  sources = [
    "packet_source.cc",
    "packet_source.h",
  ]
  deps = [ "//media/foundation:foundation" ]
}

ave_library("avplayer") {
  sources = [
    "avp_decoder.cc",
    "avp_decoder.h",
    "avplayer.cc",
    "avplayer.h",
    "message_def.h",
  ]
  configs += [ "//build/config/compiler:rtti" ]

  deps = [
    "//api:player_interface",
    "//base:logging",
    "//base:utils",
    "//base/system:ave_export",
    "//media/foundation:foundation",
  ]

  cflags = [ "-Wno-multichar" ]
}
