import("//avp.gni")
import("//base/build/ave.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
  import("//third_party/jni_zero/jni_zero.gni")

  group("android") {
    deps = [ ":AvpDemo" ]
  }

  # Generates the final merged GEN_JNI.java that the APK needs for JNI dispatch.
  # This target scans all transitive Java deps of AvpDemo to find @NativeMethods
  # interfaces and merges them into one GEN_JNI class.
  generate_jni_registration("avpdemo_jni_registration") {
    java_targets = [ ":AvpDemo" ]
  }

  ave_android_apk("AvpDemo") {
    apk_name = "AvpDemo"
    android_manifest = "AndroidManifest.xml"
    min_sdk_version = 26
    target_sdk_version = 34

    deps = [ ":avpdemo_java" ]

    # The merged GEN_JNI.java must be compiled into the APK for JNI dispatch.
    srcjar_deps = [ ":avpdemo_jni_registration" ]

    # Bundle the native player library
    shared_libraries = [ "//sdk/android:libavp" ]
  }

  ave_android_library("avpdemo_java") {
    sources = [
      "java/io/github/yoofa/avpdemo/FileBrowserActivity.java",
      "java/io/github/yoofa/avpdemo/FileItem.java",
      "java/io/github/yoofa/avpdemo/MainActivity.java",
      "java/io/github/yoofa/avpdemo/MimeTypeUtils.java",
      "java/io/github/yoofa/avpdemo/PlayerActivity.java",
      "java/io/github/yoofa/avpdemo/StorageUtils.java",
    ]

    resources_package = "io.github.yoofa.avpdemo"

    deps = [
      ":avpdemo_resources",
      "//sdk/android:avp_java",
    ]
  }

  android_resources("avpdemo_resources") {
    sources = [
      "java/res/layout/activity_file_browser.xml",
      "java/res/layout/activity_main.xml",
      "java/res/layout/activity_player.xml",
      "java/res/layout/item_file.xml",
      "java/res/layout/item_storage.xml",
      "java/res/values/strings.xml",
    ]
    android_manifest = "AndroidManifest.xml"
  }
}
