import("//avp.gni")
import("//base/build/ave.gni")

if (is_android) {
  import("//build/config/android/rules.gni")

  group("android") {
    deps = [ ":AvpDemo" ]
  }

  java_prebuilt("okhttp_java") {
    jar_path = "third_party/okhttp/okhttp-4.12.0.jar"
    output_name = "com_squareup_okhttp3_okhttp"
    supports_android = true
    enable_bytecode_checks = false
    deps = [
      "//third_party/android_deps:com_squareup_okio_okio_jvm_java",
      "//third_party/kotlin_stdlib:kotlin_stdlib_java",
    ]
  }

  ave_android_apk("AvpDemo") {
    apk_name = "AvpDemo"
    android_manifest = "AndroidManifest.xml"
    min_sdk_version = 26
    target_sdk_version = 34

    deps = [ ":avpdemo_java" ]

    # The merged GEN_JNI.java (Java side) and the C++ registration code
    # (Release-only, for JNI multiplexing) are both produced by libavp's
    # jni_registration target, which is auto-created by shared_library_with_jni.
    srcjar_deps = [ "//sdk/android:libavp__jni_registration" ]

    # Bundle the native player library
    shared_libraries = [ "//sdk/android:libavp" ]
  }

  ave_android_library("avpdemo_java") {
    sources = [
      "java/io/github/yoofa/avpdemo/FileBrowserActivity.java",
      "java/io/github/yoofa/avpdemo/FileItem.java",
      "java/io/github/yoofa/avpdemo/MainActivity.java",
      "java/io/github/yoofa/avpdemo/MimeTypeUtils.java",
      "java/io/github/yoofa/avpdemo/OkHttpHttpProvider.java",
      "java/io/github/yoofa/avpdemo/PlayerActivity.java",
      "java/io/github/yoofa/avpdemo/StorageUtils.java",
    ]

    resources_package = "io.github.yoofa.avpdemo"

    deps = [
      ":avpdemo_resources",
      ":okhttp_java",
      "//sdk/android:avp_java",
    ]
  }

  android_resources("avpdemo_resources") {
    sources = [
      "java/res/layout/activity_file_browser.xml",
      "java/res/layout/activity_main.xml",
      "java/res/layout/activity_player.xml",
      "java/res/layout/item_file.xml",
      "java/res/layout/item_storage.xml",
      "java/res/values/strings.xml",
    ]
    android_manifest = "AndroidManifest.xml"
  }
}
